--- a/Sample/Template.Mobile.Droid/Template.Mobile.Droid.csproj
+++ b/Sample/Template.Mobile.Droid/Template.Mobile.Droid.csproj
@@ -59,7 +59,7 @@
     <AndroidEnableProfiledAot>true</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
-    <AndroidPackageFormat>aab</AndroidPackageFormat>
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
     <JavaMaximumHeapSize>2G</JavaMaximumHeapSize>
@@ -78,7 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs">
-      <Version>7.1.0.442</Version>
+      <Version>7.1.0.446</Version>
     </PackageReference>
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
       <Version>3.1.2</Version>
@@ -95,9 +95,6 @@
     <PackageReference Include="Prism.Forms.Extended">
       <Version>7.2.0.1054</Version>
     </PackageReference>
-    <PackageReference Include="Prism.Microsoft.DependencyInjection.Extensions">
-      <Version>7.2.0.1054</Version>
-    </PackageReference>
     <PackageReference Include="Prism.Plugin.Popups">
       <Version>7.2.0.1046</Version>
     </PackageReference>
@@ -105,31 +102,28 @@
       <Version>0.2.0</Version>
     </PackageReference>
     <PackageReference Include="Sharpnado.Presentation.Forms">
-      <Version>1.6.0</Version>
+      <Version>1.7.0</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Core">
-      <Version>1.2.0.1686</Version>
+      <Version>1.2.0.1755</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Logging.AppCenter">
-      <Version>1.2.0.1686</Version>
+      <Version>1.2.0.1755</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Prism">
       <Version>7.2.0.1054</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Essentials.Interfaces">
-      <Version>1.5.3.2</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.6.0.967</Version>
+      <Version>4.7.0.1080</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.5.3.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.DebugRainbows">
-      <Version>1.1.4</Version>
+      <Version>365.0.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>4.6.0.967</Version>
+      <Version>4.7.0.1080</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
