--- a/Templates/Template.Installer/Template.Installer.csproj
+++ b/Templates/Template.Installer/Template.Installer.csproj
@@ -41,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DeployExtension>True</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -51,11 +52,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CopyRootFilesWizard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateInstallerPackage.cs" />
-    <Compile Include="WizardImplementation.cs" />
+    <Compile Include="GetViewModelNameWizard.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="RootFiles\azure-pipelines.yml">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="RootFiles\Clean Bin-Obj.bat">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="RootFiles\README.md">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
@@ -98,13 +109,18 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <IncludeOutputGroupsInVSIX>TemplateProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
     </ProjectReference>
-    <ProjectReference Include="..\Templates\SolutionTemplate\SolutionTemplate.csproj">
+    <ProjectReference Include="..\SolutionTemplate\SolutionTemplate.csproj">
       <Project>{C9675A26-225D-44E6-A0F2-906E44CC6BBD}</Project>
       <Name>SolutionTemplate</Name>
       <VSIXSubPath>ProjectTemplates</VSIXSubPath>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <IncludeOutputGroupsInVSIX>TemplateProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="RespawnsiveLogo.png">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
