--- a/Sample/Template.Mobile.iOS/Template.Mobile.iOS.csproj
+++ b/Sample/Template.Mobile.iOS/Template.Mobile.iOS.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Renderers\iOSMaterialStepperRenderer.cs" />
     <Compile Include="Renderers\iOSMaterialDatePickerRenderer.cs" />
     <Compile Include="Renderers\iOSMaterialTimePickerRenderer.cs" />
+    <Compile Include="Renderers\ShadowNavigationBarRenderer.cs" />
     <Compile Include="Services\PlatformThemeService.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
@@ -167,7 +168,7 @@
       <Version>3.1.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>3.1.5</Version>
+      <Version>3.1.6</Version>
     </PackageReference>
     <PackageReference Include="Prism.Forms.Extended">
       <Version>7.2.0.1054</Version>
@@ -181,6 +182,9 @@
     <PackageReference Include="Sharpnado.Presentation.Forms">
       <Version>1.7.0</Version>
     </PackageReference>
+    <PackageReference Include="Sharpnado.Shadows">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Shiny.Core">
       <Version>1.2.0.1755</Version>
     </PackageReference>
@@ -190,7 +194,7 @@
     <PackageReference Include="Shiny.Prism">
       <Version>7.2.0.1054</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.DebugRainbows">
       <Version>365.0.0</Version>
@@ -199,7 +203,7 @@
       <Version>8.4.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>4.7.0.1080</Version>
+      <Version>4.7.0.1142</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
