--- a/Templates/SolutionTemplate/Template.Mobile.Droid/Template.Mobile.Droid.csproj
+++ b/Templates/SolutionTemplate/Template.Mobile.Droid/Template.Mobile.Droid.csproj
@@ -85,7 +85,7 @@
       <Version>2.0.1.394</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>3.1.5</Version>
+      <Version>3.1.6</Version>
     </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
@@ -102,6 +102,9 @@
     <PackageReference Include="Sharpnado.Presentation.Forms">
       <Version>1.7.0</Version>
     </PackageReference>
+    <PackageReference Include="Sharpnado.Shadows">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Shiny.Core">
       <Version>1.2.0.1755</Version>
     </PackageReference>
@@ -112,7 +115,7 @@
       <Version>7.2.0.1054</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.7.0.1080</Version>
+      <Version>4.7.0.1142</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
     <Version>1.5.3.2</Version>
@@ -121,7 +124,7 @@
       <Version>365.0.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>4.7.0.1080</Version>
+      <Version>4.7.0.1142</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
