--- a/Templates/SolutionTemplate/Template.Mobile/Template.Mobile.csproj
+++ b/Templates/SolutionTemplate/Template.Mobile/Template.Mobile.csproj
@@ -30,12 +30,12 @@
 
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.1.0.446" />
-    <PackageReference Include="Apizr.Integrations.Shiny" Version="1.2.0" />
+    <PackageReference Include="Apizr.Integrations.Shiny" Version="1.4.0" />
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="3.1.2" />
     <PackageReference Include="HttpTracer" Version="2.1.1" />
     <PackageReference Include="Localizr.Extensions.Microsoft.DependencyInjection" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.6" />
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
     <PackageReference Include="Prism.Forms.Extended" Version="7.2.0.1054" />
     <PackageReference Include="Prism.Forms.LazyView" Version="1.2.0" />
@@ -45,14 +45,15 @@
     <PackageReference Include="Refit.HttpClientFactory" Version="5.1.67" />
     <PackageReference Include="Resizetizer.NT" Version="0.2.0" />
     <PackageReference Include="Sharpnado.Presentation.Forms" Version="1.7.0" />
+    <PackageReference Include="Sharpnado.Shadows" Version="1.0.2" />
     <PackageReference Include="Shiny.Core" Version="1.2.0.1755" />
     <PackageReference Include="Shiny.Logging.AppCenter" Version="1.2.0.1755" />
     <PackageReference Include="Shiny.Prism" Version="7.2.0.1054" />
     <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.5.3.2" />
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.DebugRainbows" Version="365.0.0" />
-    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.7.0.1080" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.7.0.1142" />
   </ItemGroup>
 
   <ItemGroup>
