--- a/Templates/Template.Installer/Template.Installer.csproj
+++ b/Templates/Template.Installer/Template.Installer.csproj
@@ -63,6 +63,7 @@
     <EmbeddedResource Include="RootFiles\azure-pipelines.yml" />
     <EmbeddedResource Include="RootFiles\Clean Bin-Obj.bat" />
     <EmbeddedResource Include="RootFiles\README.md" />
+    <EmbeddedResource Include="RootFiles\Settings.XamlStyler" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
@@ -78,7 +79,7 @@
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3065">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3069">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
